Bug fixes and new ttbar systematics

--- a/cms_ttbar_open_data/Data_Preprocessing.ipynb
+++ b/cms_ttbar_open_data/Data_Preprocessing.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 128,
    "id": "42143bcf-88aa-4837-9039-3e9b5ea20a94",
    "metadata": {
     "tags": []
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 129,
    "id": "aa06407e-79df-46fb-9331-555ac157873a",
    "metadata": {
     "tags": []
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 130,
    "id": "af7d38a2-db70-49f8-a0cc-bbe01d6164fe",
    "metadata": {
     "tags": []
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 131,
    "id": "bf3a86a8-6170-4805-bcd9-09ae2a88098a",
    "metadata": {
     "scrolled": true,
@@ -147,7 +147,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6792a076c6f04d73a69ff257a3d4bca5",
+       "model_id": "545b1d9fd51e4060924de5d37f7fdbd5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 132,
    "id": "5de727a0-e230-46dc-937b-9fdeba014b28",
    "metadata": {
     "tags": []
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 133,
    "id": "93ac8e99-23b2-42dc-9c55-1eeb602cb41f",
    "metadata": {},
    "outputs": [],
@@ -259,8 +259,8 @@
     "        if variation == \"nominal\":\n",
     "            syst_variations.extend(jet_kinematic_systs)\n",
     "            # syst_variations.extend(event_systs)\n",
-    "        else:\n",
-    "            return {} # Not using the non-nominal samples for now\n",
+    "        # else:\n",
+    "        #     return {} # Not using the non-nominal samples for now\n",
     "\n",
     "\n",
     "        train_labels = np.array([])\n",
@@ -330,8 +330,11 @@
     "            features = np.append(features, features_, axis=0)\n",
     "    \n",
     "            train_labels = np.append(train_labels, np.full_like(pT_lep, labels_dict[process]))\n",
-    "            syst_labels = np.append(syst_labels, np.array([syst_var]*len(pT_lep)))\n",
-    "    \n",
+    "            if variation=='nominal':\n",
+    "                syst_labels = np.append(syst_labels, np.array([syst_var]*len(pT_lep)))\n",
+    "            else:\n",
+    "                syst_labels = np.append(syst_labels, np.array([variation]*len(pT_lep)))\n",
+    "                \n",
     "        output = {\"train_labels\": col_accumulator(train_labels.tolist()),\n",
     "                  \"syst_labels\": col_accumulator(syst_labels.tolist()),\n",
     "                  \"weights\": col_accumulator(selected_weights.tolist()),\n",
@@ -347,14 +350,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 134,
    "id": "215e4af2-9251-4511-b979-286ff606d740",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6815403aeb34a5da78ce52eefa961b9",
+       "model_id": "f99f9bd2d52546c1b1def954f596b88a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -380,7 +383,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "execution took 49.30 seconds\n"
+      "execution took 180.26 seconds\n"
      ]
     }
    ],
@@ -404,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 135,
    "id": "082773ba-72e6-4197-ac39-3173be5b2b23",
    "metadata": {
     "tags": []
@@ -416,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 136,
    "id": "a9c87686-13e1-4eac-b79d-f214930e7340",
    "metadata": {
     "tags": []
@@ -438,28 +441,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 137,
    "id": "09ce6b9c-e9c8-4dd3-8d8c-af5fb7cabb12",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "array(['ME_var', 'PS_var', 'nominal', 'pt_res_up', 'pt_scale_up',\n",
+       "       'scaledown', 'scaleup'], dtype='<U11')"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_labels.shape[0] - syst_labels.shape[0]"
+    "np.unique(syst_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 139,
    "id": "d527c1e5-1e38-4553-ab89-2e478423dc09",
    "metadata": {},
    "outputs": [
@@ -541,7 +545,7 @@
     "    for label in labels_dict:\n",
     "        hep.histplot(histograms[key][label], bins=bins_dict[key], label=label, ax=axes[i], linewidth=1.5, color=color_label_map[label])\n",
     "        hep.histplot(histograms_var_pT_res[key][label], bins=bins_dict[key], label=f\"{label} pt_scale_up\", ax=axes[i], linewidth=1.5, linestyle='--', color=color_label_map[label])\n",
-    "    \n",
+    "\n",
     "    axes[i].set_yscale('log')\n",
     "    axes[i].set_xlabel(xlabel_dict[key], size=16)\n",
     "    axes[i].set_ylabel('Events', size=16)\n",
