Added a skeleton Syst Uncertainty notebook

--- a/cms_ttbar_open_data/Data_Preprocessing.ipynb
+++ b/cms_ttbar_open_data/Data_Preprocessing.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 147,
    "id": "93ac8e99-23b2-42dc-9c55-1eeb602cb41f",
    "metadata": {},
    "outputs": [],
@@ -333,6 +333,8 @@
     "            if variation=='nominal':\n",
     "                syst_labels = np.append(syst_labels, np.array([syst_var]*len(pT_lep)))\n",
     "            else:\n",
+    "                if variation in ['scaleup', 'scaledown']:\n",
+    "                    variation = 'ttbar_' + variation.replace('up','_up').replace('down','_down')\n",
     "                syst_labels = np.append(syst_labels, np.array([variation]*len(pT_lep)))\n",
     "                \n",
     "        output = {\"train_labels\": col_accumulator(train_labels.tolist()),\n",
@@ -350,14 +352,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 148,
    "id": "215e4af2-9251-4511-b979-286ff606d740",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f99f9bd2d52546c1b1def954f596b88a",
+       "model_id": "0992b904063d407e9d5be8bfefbda315",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +385,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "execution took 180.26 seconds\n"
+      "execution took 67.24 seconds\n"
      ]
     }
    ],
@@ -407,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 149,
    "id": "082773ba-72e6-4197-ac39-3173be5b2b23",
    "metadata": {
     "tags": []
@@ -419,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 150,
    "id": "a9c87686-13e1-4eac-b79d-f214930e7340",
    "metadata": {
     "tags": []
@@ -441,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 151,
    "id": "09ce6b9c-e9c8-4dd3-8d8c-af5fb7cabb12",
    "metadata": {},
    "outputs": [
@@ -449,10 +451,10 @@
      "data": {
       "text/plain": [
        "array(['ME_var', 'PS_var', 'nominal', 'pt_res_up', 'pt_scale_up',\n",
-       "       'scaledown', 'scaleup'], dtype='<U11')"
+       "       'ttbar_scale_down', 'ttbar_scale_up'], dtype='<U16')"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 152,
    "id": "d527c1e5-1e38-4553-ab89-2e478423dc09",
    "metadata": {},
    "outputs": [
@@ -567,6 +569,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fbf65653-6d0a-453e-8205-a2cb4a750a5d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c54289d-88d8-4186-9819-81495fd40608",
    "metadata": {},
    "outputs": [],
    "source": []
