CR variation estimate ready

--- a/cms_ttbar_open_data/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/cms_ttbar_open_data/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "85242300-60a2-467d-9f11-8af27bdc312a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "Train Neural Networks to estimate Likelihood Ratios\n",
     "===\n",
@@ -511,7 +513,9 @@
     "\n",
     "for key in labels_dict:\n",
     "\n",
-    "    weights_normed[dataset['train_labels_presel']==labels_dict[key]] /= weights[dataset['train_labels_presel']==labels_dict[key]].sum()\n",
+    "    mask_process = dataset['train_labels_presel']==labels_dict[key]\n",
+    "\n",
+    "    weights_normed[mask_process] /= weights[mask_process].sum()\n",
     "\n",
     "dataset['weights_normed'] = weights_normed"
    ]
