--- a/cms_ttbar_open_data/Systematic_Uncertainty_Estimation.ipynb
+++ b/cms_ttbar_open_data/Systematic_Uncertainty_Estimation.ipynb
@@ -29,11 +29,10 @@
     "\n",
     "$$\\frac{p_c(x|\\alpha_m^+)}{p_c(x)} \\, , \\frac{p_c(x|\\alpha_m^-)}{p_c(x)}$$\n",
     "\n",
-    "This is done for each systematic uncertainty and for each channel $c$ to build the final parameterized model, \n",
+    "**These are the density ratios that we will estimate using NNs in this notebook.**\n",
+    "Two ratios corresponding to each $\\alpha_m^\\pm$ will be trained for each systematic uncertainty indexed by $m$ and for each channel $c$ to build the final parameterized model, \n",
     "\n",
     "$$\\frac{p(x|\\mu, \\alpha)}{p_{ref}(x)} = \\frac{1}{\\sum_c G_c(\\alpha) \\cdot f_c(\\mu) \\cdot \\nu_c} \\sum_c f_c(\\mu) \\cdot G_c(\\alpha) \\cdot \\nu_c \\cdot g_c(x|\\alpha) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}$$\n",
-    "\n",
-    "**The workflow presented in this tutorial lacks nuisance paramter modelling. Will be adding soon!**\n",
     "\n",
     "The full workflow for building $\\mu, \\alpha-$parameterized density ratios is represented in the flowchart below:\n",
     "\n",
