More caching of data, updated systematics

--- a/cms_ttbar_open_data/Systematic_Uncertainty_Estimation.ipynb
+++ b/cms_ttbar_open_data/Systematic_Uncertainty_Estimation.ipynb
@@ -41,10 +41,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "0a769dae-97a2-44f9-bc81-e4c74ff7bedb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/plotting.py:10: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
+      "  hep.set_style(\"ATLAS\")\n",
+      "2025-05-28 12:27:21.026807: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1748435241.039870  569428 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1748435241.044546  569428 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-05-28 12:27:21.060437: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import os, sys, importlib\n",
     "sys.path.append('../')\n",
@@ -64,6 +79,8 @@
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
     "\n",
+    "import numpy as np\n",
+    "\n",
     "from coffea.analysis_tools import PackedSelection\n",
     "\n",
     "import warnings\n",
@@ -75,50 +92,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "6aa6af2f-0686-4fbf-bca8-fce9a8bb1496",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save/load the datasets from pre-processed input\n",
+    "path_prefix = '/home/jaySandesara/NSBI_workflow_tutorial/cms_ttbar_open_data/'\n",
+    "saved_data = f'{path_prefix}cached_data/'\n",
+    "\n",
     "# Systematics and which samples are affected by which systematics\n",
     "dict_systs = {'ttbar_scale': {'process':['ttbar'], 'directions':['up','down']},\n",
     "              'pt_scale': {'process':['ttbar', 'single_top_t_chan','wjets'], 'directions':['up']}}\n",
     "\n",
     "dict_systs = {'ttbar_scale': {'process':['ttbar'], 'directions':['up','down']}}\n",
     "\n",
+    "np.save(f\"{saved_data}dict_systs.npy\", dict_systs)\n",
+    "\n",
     "list_syst = [key for key in dict_systs]\n",
-    "\n",
-    "# # Features to use for training NNs. Only use lepton kinematics - use log pT for reduced spread\n",
-    "# columns = ['log_lepton_pt', 'lepton_eta', 'lepton_phi', 'log_H_T', 'n_jets']\n",
-    "# columns_scaling = ['log_lepton_pt', 'lepton_eta', 'lepton_phi', 'log_H_T']\n",
-    "\n",
-    "# Features to use for training NNs. Only use lepton kinematics - use log pT for reduced spread\n",
-    "columns = ['log_lepton_pt', 'lepton_eta', 'lepton_phi', 'log_H_T']\n",
-    "columns_scaling = ['log_lepton_pt', 'lepton_eta', 'lepton_phi', 'log_H_T']\n",
-    "\n",
-    "# # Features to use for training NNs. Only use lepton kinematics - use log pT for reduced spread\n",
-    "# columns = ['log_lepton_pt', 'lepton_eta', 'lepton_phi']\n",
-    "# columns_scaling = ['log_lepton_pt', 'lepton_eta', 'lepton_phi']\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "1051f14a-0104-418b-9e43-6edcdcd07df2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the datasets from pre-processed input\n",
-    "path_prefix = '/home/jaySandesara/NSBI_workflow_tutorial/cms_ttbar_open_data/'\n",
-    "saved_data = f'{path_prefix}cached_data/'\n",
+    "columns = np.load(f\"{saved_data}columns.npy\")\n",
+    "columns_scaling = np.load(f\"{saved_data}columns_scaling.npy\")\n",
     "\n",
     "dataset_incl = pd.read_hdf(f\"{saved_data}dataset_inclusive.h5\", key=\"dataset\", mode='r')\n",
     "presel_score_incl = np.load(f\"{saved_data}presel_score_incl.npy\")\n",
     "\n",
     "dataset_incl['presel_score'] = presel_score_incl\n",
     "\n",
-    "preselection_cut_lower = -0.6\n",
-    "# preselection_cut_lower = -0.0\n",
+    "preselection_cut_lower = np.load(f\"{saved_data}preselection_cut_lower.npy\")\n",
     "\n",
     "dataset_SR = dataset_incl[(dataset_incl.presel_score>=preselection_cut_lower)].copy()\n",
     "dataset_SR = dataset_SR[(dataset_SR.lepton_pt<=200.0)].copy()\n",
@@ -129,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "60a09162-926c-49a8-956d-0e952a2c8485",
    "metadata": {},
    "outputs": [],
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "43e88709-cf0c-435d-85aa-f7ac61a34528",
    "metadata": {},
    "outputs": [],
@@ -168,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "d26b8c5d-ada8-4913-98f9-0f498b4d72cb",
    "metadata": {},
    "outputs": [
@@ -176,9 +186,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ttbar': {'ttbar_scale': {'up': array([1.05110718, 1.02962483, 0.91286065, 0.95168986, 0.94111488,\n",
-      "       0.96444637, 0.97297215, 0.97989314, 0.96542496]), 'down': array([1.0028908 , 1.00995417, 0.95835706, 1.0026827 , 0.97945387,\n",
-      "       1.06033867, 1.06120468, 1.07553399, 1.05167616])}}, 'single_top_t_chan': {'ttbar_scale': {'up': array([1., 1., 1., 1., 1., 1., 1., 1., 1.]), 'down': array([1., 1., 1., 1., 1., 1., 1., 1., 1.])}}, 'wjets': {'ttbar_scale': {'up': array([1., 1., 1., 1., 1., 1., 1., 1., 1.]), 'down': array([1., 1., 1., 1., 1., 1., 1., 1., 1.])}}}\n"
+      "{'ttbar': {'ttbar_scale': {'up': array([1.02683693, 0.99911486, 0.97356021, 0.94799736, 0.97237292,\n",
+      "       0.99406532, 0.99904336, 1.01018534, 1.01159173]), 'down': array([0.99502665, 0.99837745, 1.09742263, 1.06865511, 1.03750643,\n",
+      "       1.00425092, 0.98348145, 0.98083827, 1.00677438])}}, 'single_top_t_chan': {'ttbar_scale': {'up': array([1., 1., 1., 1., 1., 1., 1., 1., 1.]), 'down': array([1., 1., 1., 1., 1., 1., 1., 1., 1.])}}, 'single_top_tW': {'ttbar_scale': {'up': array([1., 1., 1., 1., 1., 1., 1., 1., 1.]), 'down': array([1., 1., 1., 1., 1., 1., 1., 1., 1.])}}, 'wjets': {'ttbar_scale': {'up': array([1., 1., 1., 1., 1., 1., 1., 1., 1.]), 'down': array([1., 1., 1., 1., 1., 1., 1., 1., 1.])}}}\n"
      ]
     }
    ],
@@ -215,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "b27caa55-6231-4abe-bf31-0330d4e918ea",
    "metadata": {},
    "outputs": [],
@@ -227,25 +237,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "c69e6230-cdd9-4a73-893e-13774cefc50d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Normalizing the training weights post preselection \n",
-    "weights_normed      = dataset_SR['weights'].to_numpy().copy()\n",
-    "weights             = dataset_SR['weights'].to_numpy().copy()\n",
+    "# # Normalizing the training weights post preselection \n",
+    "# weights_normed      = dataset_SR['weights'].to_numpy().copy()\n",
+    "# weights             = dataset_SR['weights'].to_numpy().copy()\n",
     "\n",
-    "for syst_sample in np.unique(dataset_SR[\"syst_labels\"]):\n",
+    "# for syst_sample in np.unique(dataset_SR[\"syst_labels\"]):\n",
     "\n",
-    "    mask_syst = dataset_SR.syst_labels==syst_sample\n",
+    "#     mask_syst = dataset_SR.syst_labels==syst_sample\n",
     "    \n",
-    "    for key in labels_dict:\n",
+    "#     for key in labels_dict:\n",
     "\n",
-    "        mask_syst_process                     = mask_syst & (dataset_SR.type==key)\n",
-    "        weights_normed[mask_syst_process]    /= weights[mask_syst_process].sum()\n",
+    "#         mask_syst_process                     = mask_syst & (dataset_SR.type==key)\n",
+    "#         weights_normed[mask_syst_process]    /= weights[mask_syst_process].sum()\n",
     "\n",
-    "dataset_SR['weights_normed'] = weights_normed"
+    "# dataset_SR['weights_normed'] = weights_normed"
    ]
   },
   {
@@ -288,9 +298,7 @@
     "importlib.reload(sys.modules['nsbi_common_utils.training'])\n",
     "from nsbi_common_utils.training import TrainEvaluate_NN\n",
     "\n",
-    "\n",
-    "ref_processes = ['ttbar']\n",
-    "mask_ref = np.isin(dataset_SR.type, ref_processes) & (dataset_SR.syst_labels=='nominal')\n",
+    "ref_processes = np.load(f\"{saved_data}ref_processes.npy\")\n",
     "\n",
     "dataset_syst_process = {}\n",
     "NN_training_syst_process = {}\n",
@@ -323,19 +331,22 @@
     "            path_to_models = f'{top_path}output_model_params_{process}_{syst}_{direction}/'\n",
     "            \n",
     "            mask_process_syst = (dataset_SR.syst_labels==syst+'_'+direction) & mask_process\n",
-    "            # mask_nominal = (dataset_SR.syst_labels=='nominal') & mask_process\n",
+    "            mask_nominal = (dataset_SR.syst_labels=='nominal') & mask_process\n",
     "\n",
-    "            if True not in np.unique(mask_process_syst):\n",
-    "                print(syst)\n",
-    "                print(process)\n",
+    "            dataset_num = dataset_SR[mask_process_syst].copy()\n",
+    "            dataset_den = dataset_SR[mask_nominal].copy()\n",
+    "\n",
+    "            dataset_num['train_labels'] = 1\n",
+    "            dataset_den['train_labels'] = 0\n",
+    "\n",
+    "            dataset_num['weights_normed'] = dataset_num['weights'].to_numpy() / dataset_num['weights'].sum()\n",
+    "            dataset_den['weights_normed'] = dataset_den['weights'].to_numpy() / dataset_den['weights'].sum()\n",
+    "            \n",
     "            # Build a training dataset for the training of p_<process_type>/p_<ref_processes> density ratio\n",
-    "            dataset_syst_process = pd.concat([dataset_SR[mask_process_syst].copy(), \n",
-    "                                                            dataset_SR[mask_ref].copy()])\n",
+    "            dataset_syst_process = pd.concat([dataset_num, dataset_den])\n",
     "\n",
-    "            mask_num_hypothesis = (dataset_syst_process.syst_labels==syst+'_'+direction)\n",
-    "            dataset_syst_process['train_labels'] = 0\n",
-    "            dataset_syst_process.loc[mask_num_hypothesis, 'train_labels'] = 1\n",
     "            print(dataset_syst_process[dataset_syst_process.train_labels==1]['weights'].sum()/dataset_syst_process[dataset_syst_process.train_labels==0]['weights'].sum())\n",
+    "            \n",
     "            NN_training_syst_process[process][syst][direction] = TrainEvaluate_NN(dataset_syst_process, \n",
     "                                                                                   dataset_syst_process['weights_normed'],\n",
     "                                                                                   dataset_syst_process['train_labels'],\n",
