added HiggsML package for data processing

--- a/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
@@ -2,35 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from hep_challenge.systematics import systematics\n",
-    "from hep_challenge.datasets import download_public_dataset"
+    "path_prefix = '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/'\n",
+    "\n",
+    "import os\n",
+    "os.chdir(f\"{path_prefix}\")\n",
+    "\n",
+    "from HiggsML.datasets import download_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-31 13:12:39,210 - HiggsML.datasets     - INFO     - Handling as URL: https://zenodo.org/records/15131565/files/FAIR_Universe_HiggsML_data.zip\n",
+      "2025-05-31 13:12:39,211 - HiggsML.datasets     - INFO     - Current working directory: /data/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau\n",
+      "2025-05-31 13:12:39,298 - HiggsML.datasets     - INFO     - Total rows: 220099101\n",
+      "2025-05-31 13:12:39,299 - HiggsML.datasets     - INFO     - Test size: 66029730\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = download_dataset(\"https://zenodo.org/records/15131565/files/FAIR_Universe_HiggsML_data.zip\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-31 13:13:00,781 - HiggsML.datasets     - INFO     - Selected train size: 154069371\n",
+      "2025-05-31 13:21:00,137 - HiggsML.datasets     - INFO     - Data loaded successfully\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "data = download_public_dataset()"
+    "data.load_train_set()\n",
+    "df_training = data.get_train_set()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_had_pt', 'PRI_had_eta',\n",
+       "       'PRI_had_phi', 'PRI_jet_leading_pt', 'PRI_jet_leading_eta',\n",
+       "       'PRI_jet_leading_phi', 'PRI_jet_subleading_pt',\n",
+       "       'PRI_jet_subleading_eta', 'PRI_jet_subleading_phi', 'PRI_n_jets',\n",
+       "       'PRI_jet_all_pt', 'PRI_met', 'PRI_met_phi', 'weights',\n",
+       "       'detailed_labels', 'labels', 'DER_mass_transverse_met_lep',\n",
+       "       'DER_mass_vis', 'DER_pt_h', 'DER_deltaeta_jet_jet', 'DER_mass_jet_jet',\n",
+       "       'DER_prodeta_jet_jet', 'DER_deltar_had_lep', 'DER_pt_tot', 'DER_sum_pt',\n",
+       "       'DER_pt_ratio_lep_had', 'DER_met_phi_centrality',\n",
+       "       'DER_lep_eta_centrality'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_training.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "NSBI",
+   "language": "python",
+   "name": "nsbi"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
